syntax = "proto3";

option csharp_namespace = "Explorer.API";

service StakeholdersMicroservice {
    rpc GenerateAccessToken(TokenRequest) returns (TokenResponse) {}
}

message TokenRequest {
    int64 userId = 1;
    int64 personId = 2;
    string username = 3;
    string role = 4;
}

message TokenResponse {
    int64 id = 1;
    string accessToken = 2;
}
